objects/Veda_Configuration_Data_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>Configuration_Data_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Configuration Data Attribute</label>
    <nameField>
        <label>Configuration Data Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Configuration Data Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>